I do left section with my nickname and background under the h1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <aside>
-
+        <header>
+        </header>
+        <h1>BBUTTER 98</h1>
     </aside>
     <main>
         <section></section>
