next step is creating a middle section of the right block of the page, which includes 6 inputs to insert data and simple validation password field with confirm password field

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,9 +17,49 @@
         <h1>BBUTTER 98</h1>
     </aside>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="first">
+
+        </section>
+        <section class="second">
+            <h1>Let's do this!</h1>
+            <form action="#" method="POST">
+                <section class="form">
+                    <section class="label1">
+                        <section class="input1">
+                            <label for="firstName">FIRST NAME</label><br>
+                            <input type="text" id="firstName">
+                        </section>
+                        <section class="input2">
+                            <label for="email">EMAIL</label><br>
+                            <input type="text" id="email">
+                        </section>
+                        <section class="input3">
+                            <label for="password">PASSWORD</label><br>
+                            <input type="password" id="password"><br>
+                            <span id="error1"></span>
+                        </section>
+                    </section>
+                    <section class="label2">
+                        <section class="input4">
+                            <label for="lastName">LAST NAME</label><br>
+                            <input type="text" id="lastName">
+                        </section>
+                        <section class="input5">
+                            <label for="phoneNumber">PHONE NUMBER</label><br>
+                            <input type="text" id="phoneNumber">
+                        </section>
+                        <section class="input6">
+                            <label for="confPassword">CONFIRM PASSWORD</label><br>
+                            <input type="password" id="confPassword"><br>
+                            <span id="error2"></span>
+                        </section>
+                    </section>
+                </section>
+            </form>
+        </section>
+        <section class="third">
+
+        </section>
     </main>
     <script src="validation.js"></script>
 </body>
