this is my final version of page, i add some text to block right and give button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </aside>
     <main>
         <section class="first">
-
+            <p>This is not a real online service! You know you need something like <i>this</i> in your life
+            to help you realize your deepest dreams.</p>
+            <p>Sing up <i> now </i> to get started</pS>
         </section>
         <section class="second">
             <h1>Let's do this!</h1>
@@ -58,7 +60,10 @@
             </form>
         </section>
         <section class="third">
-
+            <button>
+                Create account
+            </button>
+            <p>Already have an account? <a href="#login">Log in</a></p>
         </section>
     </main>
     <script src="validation.js"></script>
